src/test/deca/context/invalid/return_void.deca
// Description:
//  Programme returun void
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 07/01/2025

{   
   return;

}